@@ -6,6 +6,7 @@ Build-Depends: buffer,
                debhelper (>= 7.0.50~),
                devscripts,
                libconfig-file-perl,
+               libfile-basedir-perl,
                libfile-rsync-perl,
                libfile-slurp-perl,
                libfile-touch-perl,
@@ -22,6 +23,7 @@ Package: unburden-home-dir
 Architecture: all
 Depends: buffer,
          libconfig-file-perl,
+         libfile-basedir-perl,
          libfile-rsync-perl,
          libfile-touch-perl,
          libfile-which-perl,
