@@ -47,6 +47,8 @@ systems and in the \fIetc/\fR directory of the source tar ball.
 \fI/etc/unburden-home-dir.list\fR,
 \fI~/.unburden-home-dir\fR,
 \fI~/.unburden-home-dir.list\fR,
+\fI~/.config/unburden-home-dir/config\fR,
+\fI~/.config/unburden-home-dir/list\fR,
 \fI/etc/default/unburden-home-dir\fR,
 \fI/etc/X11/Xsession.d/95unburden-home-dir\fR
 .PP
