@@ -5,6 +5,9 @@ unburden-home-dir (0.3.2) UNRELEASED; urgency=low
   * Fix trailing slashes on revert (GitHub issue #5, thanks Johan van den
     Dorpe!)
   * debian/control: Apply wrap-and-sort
+  * Add support for using XDG config directory for configuration
+    files. (Closes: #692807)
+    + Add dependency and build-dependency on libfile-basedir-perl.
   * Refactor test suite
     + Some tests use Test::Differences now. Add as build dependency.
   * Fix test suite failures with newer coreutils versions in
